hello-world/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  ingressClassName: nginx # Use "nginx" for Nginx Ingress Controller
  rules:
  - host: pune.localhost 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-deployment-hello-world
            port:
              number: 80
